[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.2.0"
async-std = "1.12.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sv1_api = "0.1.2"
